[package]
name = "xid-rust"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
libipld-cbor = "0.16.0"
libipld-core = "0.16.0"
libipld-macro = "0.16.0"

multibase = "0.9.1"

tinyvec = "1.6.0"
hex = "0.4.3"

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
sha = "1.0.3"
